--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch screens.splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+     <item android:drawable="@android:color/white" />
+
+
 
     <!-- You can insert your own image assets here -->
-    <item>
+    <!-- <item>
+
         <bitmap
             android:gravity="center"
-            android:color="@android:color/white" 
-            android:src="@drawable/thikana_ki_bangla_logo" />
-    </item>
+            android:src="@drawable/logo" />
+    </item>  -->
 </layer-list>
 
 
