--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch screens.splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-     <item android:drawable="@android:color/white" />
+     <!-- <item android:drawable="@android:color/white" /> -->
+     <item android:drawable="@color/green" />
 
 
 
     <!-- You can insert your own image assets here -->
-    <!-- <item>
+    <item>
 
         <bitmap
             android:gravity="center"
             android:src="@drawable/logo" />
-    </item>  -->
+    </item>
 </layer-list>
 
 
