--- a/android/app/src/main/res/values/color.xml
+++ b/android/app/src/main/res/values/color.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name ="white">#FFFFFF</color>
+    <color name ="green">#97e174</color>
 </resources>
